--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.1/css/all.css">
+    <link rel="stylesheet" href="./stylesheets/main-styles.css">
+    <title>The App Academy Times</title>
+</head>
+<body>
+    <header><div class="masthead">
+        <div class = "masthead__menu-and-search">
+            <div id = "menu1">
+            <i class="fa fa-bars"></i>
+          </div>
+          <div id = "search1">
+            <i class="fa fa-search"></i>
+          </div></div>
+        <div class = "masthead__actions">
+            <button>Subscribe Now</button>
+            <button>Log In</button>
+            <div id = "settings1">
+            <i class="fas fa-cog"></i>
+            </div>
+        </div>
+        <div class = "masthead__technologies">little technologies</div>
+        <div class = "masthead__date">date</div>
+        <div class = "masthead__logo">logo</div>
+        <div class = "masthead__paper">today's paper</div>
+      </div></header>
+    <main></main>
+    <footer></footer>
+
+
+</body>
+</html>
