--- a/index.html
+++ b/index.html
@@ -24,10 +24,22 @@
             <i class="fas fa-cog"></i>
             </div>
         </div>
-        <div class = "masthead__technologies">little technologies</div>
-        <div class = "masthead__date">date</div>
-        <div class = "masthead__logo">logo</div>
-        <div class = "masthead__paper">today's paper</div>
+        <div class = "masthead__technologies">
+          <!-- <div class = "languages-box"> -->
+            <span class="tech-languages">CSS</span>
+            <span class="tech-languages">HTML</span>
+            <span class="tech-languages">JavaScript</span>
+            <span class="tech-languages">Python</span>
+          <!-- </div> -->
+        </div>
+        <div class = "masthead__date">Tuesday, October 31, 2020
+        </div>
+        <div class = "masthead__logo">
+          <img src="./images/AA_Times_Logo.png">
+        </div>
+        <div class = "masthead__paper">
+          <i class="far fa-newspaper"></i> Today's Paper
+        </div>
       </div></header>
     <main></main>
     <footer></footer>
